[metadata]
name = czech-sort
version = 1.0.0

description = Text sorting function for the Czech language
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Petr Viktorin
author_email = encukou@gmail.com
url = https://github.com/encukou/czech-sort
classifiers = 
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3

[options]
zip_safe = True
packages =
    czech_sort

[options.extras_require]
test = pytest


[tox:tox]
minversion = 3.20.0
envlist = py27,py35,py36,py37,py38,py39

[testenv]
deps =
    pytest
commands =
    python -m pytest test_czech_sort
